Update MANIFEST with required file to test segmetation
Fix testing data file issue

Manifest testing/data directory

Move contents of 'testing/data' to 'testing', delete 'testing/data' and update Manifest.in file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include README.rst
 include LICENSE.txt
 include music_album_creation/format_classification/data/*
 include music_album_creation/display-logo.sh
+include testing/know_your_enemy.mp3
