--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,8 @@ language: python
 python:
   - "3.5"
   - "3.6"
-  # PyPy versions
-#  - "pypy3.5"
-
-#before_install:
-#  - chmod +x execute-file1.py
-#  - chmod +x execute-file2.py
-
-# command to install dependencies
+before_install:
+  - sudo apt-get install ffmpeg
 install:
-#  - pip install -r requirements.txt  # this is automatically executed
   - pip install .
-# command to run tests
 script: python -m pytest
