--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,16 @@
 include README.rst
+include AUTHORS.rst
+include CHANGELOG.rst
+
 include LICENSE.txt
-include music_album_creation/format_classification/data/*
-include music_album_creation/display-logo.sh
-include testing/know_your_enemy.mp3
+
+include src/music_album_creation/format_classification/data/*
+include src/music_album_creation/display-logo.sh
+include tests/know_your_enemy.mp3
+
+graft src
+graft tests
+
+include .travis.yml
+
+global-exclude *.py[cod] __pycache__ *.so *.dylib
