--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,151 @@
 language: python
-python:
-  - "3.5"
-  - "3.6"
-  - "3.7"
+env:
+  global:
+    - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
+    - SEGFAULT_SIGNALS=all
+
+#matrix:
+#  include:
+#    - python: '3.6'
+#      env:
+#      - TOXENV=check
+#    - env:
+#      - TOXENV=py35
+#      python: '3.5'
+#    - env:
+#      - TOXENV=py36
+#      python: '3.6'
+#    - env:
+#      - TOXENV=py37
+#      python: '3.7'
+
+
 before_install:
+  - python --version
+#  - pip install coveralls
+  - uname -a
+  - lsb_release -a
+  - chmod +x .travis/install-tox.sh
+  - chmod +x .travis/run-tox.sh
   - sudo apt-get install ffmpeg
+#  - chmod +x .travis/deploy.sh
+
 install:
-  - pip install .
-script: python -m pytest
+  - .travis/install-tox.sh
+#  - pip install tox-travis
+  - virtualenv --version
+  - easy_install --version
+  - pip --version
+  - tox --version
+  - pip install coveralls
+
+cache: pip
+script: .travis/run-tox.sh
+
+jobs:
+  fail_fast: true
+  include:
+#  - stage: clean coverage data
+#    python: '3.6'
+#    env: TOXENV=clean
+  - stage: run unittests
+    python: '3.6'
+    env: TOXENV=quality
+    script:
+      - export TOX_SKIP_MISSING_INTERPRETERS="False"
+      - tox
+  - stage: run unittests
+    python: '3.5'
+    env: TOXENV=py35
+  - stage: run unittests
+    python: '3.6'
+    env: TOXENV=py36
+  - stage: run unittests
+    python: '3.7'
+    env: TOXENV=py37
+#  - stage: send coverage data to coveralls.io
+#    python: '3.6'
+#    env: TOXENV=reporting
+#  allow_failures:
+#    - env: TOXENV=reporting
+
+after_failure:
+  - more .tox/log/* | cat
+  - more .tox/*/log/* | cat
+
+#  - stage: run tests and linters
+#    language: node_js
+#    node_js: 6
+#    cache: yarn
+#    env: COMPONENT=server CMD=lint
+#    before_install: cd server
+#    script: bash ../scripts/travis-yarn.sh
+#
+#quality: &quality
+#  - stage: "Quality"
+#    name: "Quallity assertion"
+#    script: .travis/run-tox.sh
+#
+#tests: &tests
+#  - stage: "Tests"
+#    name: "Unit Tests"
+#    script: .travis/run-tox.sh
+
+
+#  - name: "Helper Tests"
+#    script: time ./run yarn test:named Helper
+#  - name: "Integration Tests"
+#    script: time ./run yarn test:named Integration
+#  - name: "Acceptance Tests"
+#    script: time ./run yarn test:named Acceptance
+#  - name: "a11y"
+#    script: PERCY_ENABLE=0 time ./run yarn test:named Acceptance --query enableA11yAudit=true
+
+#quality: &quality
+#  - stage: "Quality"
+#    name: "Lint JS/TS"
+#    script: time ./run yarn lint:js
+#  - name: "Lint Templates"
+#    script: time ./run yarn lint:hbs
+#  - name: "Lint Styles"
+#    script: time ./run yarn lint:sass
+#  - name: "Check Types"
+#    script: time ./run yarn tsc
+#  - name: "Translations"
+#    script: time ./run yarn lint:i18n
+
+#jobs:
+#  fail_fast: true
+#
+#  include:
+#    - <<: *quality
+#      env:
+#      - TOXENV=quality
+
+#    - <<: *tests
+#      env:
+#      - TOXENV=py35
+##
+#    - <<: *tests
+#      python: 3.6
+#      env:
+#      - TOXENV=py36
+#
+#    - <<: *tests
+#      python: 3.7
+#      env:
+#      - TOXENV=py37
+
+#script: ./.travis/run-tox.sh
+#
+#deploy:
+#  provider: script
+#  script: .travis/deploy.sh
+#  on:
+#    all_branches: true
+
+
+#notifications:
+#  email:
+#    on_success: never
+#    on_failure: never
