--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include AUTHORS.rst
 include CHANGELOG.rst
 
 include LICENSE.txt
+include requirements.txt
 
 include src/music_album_creation/format_classification/data/*
 include src/music_album_creation/display-logo.sh
@@ -12,5 +13,9 @@ graft src
 graft tests
 
 include .travis.yml
+include .coveragerc
+include tox.ini
+
+graft .travis
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib
