Add exception for when youtube has too many requests. Adjust unittests to insist with delayed requests to ensure passing of test. Add an exception for ssl certificate verification error that can happen on the scrutinizer.io server when trying to download youtube and adjust unittests rather clumslyli but agilely. Configure scrutinizer.io server to perform Tests. Enable code-rating and code-duplication inspections, py-scrutinizer, pylint, build-test for python3.7 by running tox and attempt to perform coverage with combine command. NOTE: should try the append-flag for th epytest-cov command of tox and instead of using the scrutinizer feature for 'coverage combine' use the tox feature of running in the final env of the pipeline a 'coverage combine' command. Currently if a tox env requires a python interpreter that is not found in scrutinizer then the tox env test is skipped. Can be achived by manually installing the other interpreters on worker. Attemp to exclude 'build' directory so that scrutinizer does not look there and find duplicates with the source code. Reconfigure tox so that it executes coverage environemnt at the end of the pipeline. NOTE: should confirm the previous. Pass all travis and scrutinizer build tests.
Fix README

Fix exceptions

WIP

WIP

Add default .scrutenizer.yml

Include .scrutinizer.yml in the distribution

Install tox in node 'tests' as dependency

Change syntax

Add an exception for ssl certificate verification error that can happen on the scrutinizer.io server when trying to download youtube video

Fix regex of exception

Add information to exception fired to check string not matching

Wrap handling the ssl exception arround the test_valid_url unittest

Wrap handling the ssl exception arround the test_valid_url unittest: Version 2

Wrap handling the ssl exception arround the test_valid_url unittest: Version 3

Update tox execution pipeline to end with 'report' and 'coveralls' envs

Add more information to ExceptionFactory when not a predef

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -13,7 +13,9 @@ graft src
 graft tests
 
 include .travis.yml
+include .scrutinizer.yml
 include .coveragerc
+include .coverage
 include tox.ini
 
 graft .travis
