--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ envlist =
     py35,
     py36,
     py37,
+    report,
+;    coveralls
 ;    reporting
 ;    report
 ;    coveralls
@@ -35,21 +37,6 @@ deps =
 
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv --ignore=src}
-
-;
-;[testenv:check]
-;deps =
-;    docutils
-;    check-manifest
-;    flake8
-;    readme-renderer
-;    pygments
-;skip_install = true
-;commands =
-;    python setup.py check --strict --metadata --restructuredtext
-;    check-manifest {toxinidir}
-;    flake8 src tests setup.py
-;;    isort --verbose --check-only --diff --recursive src tests setup.py
 
 
 [testenv:quality]
@@ -120,9 +107,7 @@ ignore =
 deps = coverage
 skip_install = true
 commands =
-    ls -la
     coverage erase
-    ls -la
 
 [testenv:reporting]
 basepython = {env:TOXPYTHON:python3.6}
@@ -131,29 +116,26 @@ deps =
     coveralls
 skip_install = true
 commands =
-    ls -la
     coverage report
     coverage html
     coveralls
 
-;[testenv:report]
-;deps = coverage
-;skip_install = true
-;commands =
-;    coverage report
-;    coverage html
-;
-;[testenv:coveralls]
-;deps =
-;    coveralls
-;skip_install = true
-;commands =
+[testenv:report]
+deps = coverage
+skip_install = true
+commands =
+    coverage report
+    coverage html
+
+[testenv:coveralls]
+deps =
+    coveralls
+skip_install = true
+commands =
+    coveralls []
 ;;    coverage run --source=music_album_creation setup.py test
 ;;    coveralls
-;    coveralls []
-;;
-;;[travis:after]
-;;envlist = report,coveralls
+
 
 [testenv:py35]
 basepython = {env:TOXPYTHON:python3.5}
