--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ skip_missing_interpreters = {env:TOX_SKIP_MISSING_INTERPRETERS:True}
 [testenv]
 basepython =
     {docs,spell}: {env:TOXPYTHON:python3.6}
-    {bootstrap,clean,check,report,coveralls}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,coveralls,quality}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -39,21 +39,29 @@ commands =
     {posargs:pytest --cov --cov-report=term-missing -vv --ignore=src}
 
 
-[testenv:quality]
-basepython = {env:TOXPYTHON:python3.6}
+# This env must succeed in order to be meaningful to proceed running the rest of the environments
+[testenv:clean]
 deps =
-    docutils
-    check-manifest
     coverage
-    flake8
-    readme-renderer
-    pygments
+    check-manifest
 skip_install = true
 commands =
-    python setup.py check --strict --metadata --restructuredtext
+    coverage erase
     check-manifest {toxinidir}
-    flake8 src tests setup.py
+    python setup.py check --strict --metadata
 
+
+# This env can be potentially allowed to fail
+[testenv:quality]
+deps =
+    flake8
+    pygments
+    docutils
+    readme-renderer
+skip_install = true
+commands =
+    flake8 src tests setup.py
+    python setup.py check --strict --restructuredtext
 
 [flake8]
 # select the type of style errors to check
@@ -103,12 +111,6 @@ ignore =
     E402
 
 
-[testenv:clean]
-deps = coverage
-skip_install = true
-commands =
-    coverage erase
-
 [testenv:reporting]
 basepython = {env:TOXPYTHON:python3.6}
 deps =
@@ -145,3 +147,19 @@ basepython = {env:TOXPYTHON:python3.6}
 
 [testenv:py37]
 basepython = {env:TOXPYTHON:python3.7}
+
+
+
+;[testenv:quality]
+;basepython = {env:TOXPYTHON:python3.6}
+;deps =
+;    docutils
+;    check-manifest
+;    coverage
+;    flake8
+;    readme-renderer
+;    pygments
+;skip_install = true
+;commands =
+;    python setup.py check --strict --metadata --restructuredtext
+;    flake8 src tests setup.py
