--- a/.coveragerc
+++ b/.coveragerc
@@ -14,3 +14,13 @@ parallel = true
 show_missing = true
 precision = 2
 omit = *migrations*
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    except ImportError
+    raise NotImplementedError
+    pass
+    ABCmeta
+    abstractmethod
+    abstractproperty
+    abstractclassmethod
+    warnings.warn
