Run pytest-cov with append flag in tox, clean code
Modify setup.cfg

Try to make scrutinizer.io recognize the coverage data

Make travis send coverage data on unittests build jobs

WIP

Comment out coveralls from tox pipeline

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -21,7 +21,8 @@ build:
             tests:
                 before:
                     - pip install coverage
-                after:
+                override:
+                    - tox
                     -
                         command: coverage combine
                         coverage:
