--- a/setup.cfg
+++ b/setup.cfg
@@ -2,37 +2,30 @@
 description-file = README.rst
 license_file = LICENSE.txt
 
-
 [flake8]
 max-line-length = 140
 exclude = */migrations/*
 
 [tool:pytest]
 testpaths = tests
-norecursedirs =
-    migrations
+norecursedirs = 
+	migrations
+python_files = 
+	test_*.py
+	*_test.py
+	tests.py
+addopts = 
+	-ra
+	--strict
+	--doctest-modules
+	--doctest-glob=\*.rst
+python_versions = 
+	py35
+	py36
+	py37
+dependencies = 
+environment_variables = 
+	-
 
-python_files =
-    test_*.py
-    *_test.py
-    tests.py
-addopts =
-    -ra
-    --strict
-    --doctest-modules
-    --doctest-glob=\*.rst
+[easy_install]
 
-python_versions =
-    py35
-    py36
-    py37
-
-dependencies =
-#    1.4: Django==1.4.16 !python_versions[py3*]
-#    1.5: Django==1.5.11
-#    1.6: Django==1.6.8
-#    1.7: Django==1.7.1 !python_versions[py26]
-# Deps commented above are provided as examples. That's what you would use in a Django project.
-
-environment_variables =
-    -
