--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,7 @@ envlist =
     py35,
     py36,
     py37,
-    report,
-;    coveralls
-;    reporting
-;    report
+    reporting,
 ;    coveralls
 
 
@@ -17,11 +14,10 @@ skip_missing_interpreters = {env:TOX_SKIP_MISSING_INTERPRETERS:True}
 [testenv]
 basepython =
     {docs,spell}: {env:TOXPYTHON:python3.6}
-    {bootstrap,clean,check,report,coveralls,quality}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,reporting,coveralls,quality}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
-    # klein project below 2
     PIP_DISABLE_PIP_VERSION_CHECK=1
     VIRTUALENV_NO_DOWNLOAD=1
 passenv =
@@ -32,11 +28,11 @@ passenv =
     codecov: TRAVIS TRAVIS_*
 deps =
     pytest
-    # pytest-travis-fold
     pytest-cov
 
 commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv --ignore=src}
+    # --cov-append so that multiple test runs do not erase the .coverage file at each of their starts
+    {posargs:pytest --cov --cov-report=term-missing -vv --ignore=src --cov-append}
 
 
 # This env must succeed in order to be meaningful to proceed running the rest of the environments
@@ -101,7 +97,7 @@ ignore =
     W504,
     # line too long
     E501,
-    # class GavError(Exception): pass
+    # multiple statements on one line (colon)
     E701,
     # too many leading # for block comment
     E266,
@@ -112,18 +108,8 @@ ignore =
 
 
 [testenv:reporting]
-basepython = {env:TOXPYTHON:python3.6}
 deps =
     coverage
-    coveralls
-skip_install = true
-commands =
-    coverage report
-    coverage html
-    coveralls
-
-[testenv:report]
-deps = coverage
 skip_install = true
 commands =
     coverage report
@@ -134,9 +120,10 @@ deps =
     coveralls
 skip_install = true
 commands =
+# requires COVERALLS_REPO_TOKEN
     coveralls []
+;;    coveralls  (same as above)
 ;;    coverage run --source=music_album_creation setup.py test
-;;    coveralls
 
 
 [testenv:py35]
@@ -147,19 +134,3 @@ basepython = {env:TOXPYTHON:python3.6}
 
 [testenv:py37]
 basepython = {env:TOXPYTHON:python3.7}
-
-
-
-;[testenv:quality]
-;basepython = {env:TOXPYTHON:python3.6}
-;deps =
-;    docutils
-;    check-manifest
-;    coverage
-;    flake8
-;    readme-renderer
-;    pygments
-;skip_install = true
-;commands =
-;    python setup.py check --strict --metadata --restructuredtext
-;    flake8 src tests setup.py
