[NEW]: Setup Appveyor CI with basic bootstrapper. Send coverage data to coveralls.io for builds from both travis and appveyor jobs. Make readline cross linux/windows compatible. Further fine-grain the defined tox environments. Use parsing capability from StringParser in metadata. Implement a method for trying repeatedly to download in case of server overload. ADd tests for metadata, enrich tests for parsers. Parse stranger track names and greek.
WIP

Investigate dataset file name parsing error on windows build

Match sdist files with source control files

Just do two p35 tox-env tests

Exit with 1 if despite locating the xxx-split.txt files parsing failes

Add 'readline' package in 'requirements.txt' file and in the 'install_requires' parameter of the setup method, to try overcome error caused by the 'import readline' statement in the 'create-album.py' script when importing its main method from 'test_create_album_program' module in Windows build

Try the 'usedevelop = true' setting to try avoid python interpreters tox-appveyor mismatch error on Windows build

Pip install pyreadline in Windows worker to try overcome the 'python setup.py egg_info' failing on Windows build

Remove readline from install_requires and requirements.txt

Add readline in requirements.txt

Remove readline from install_requires and requirements.txt

Assure tox gets the minimum version of virtualenv available as dependency

Try and upgrade pip after during bootstrap of appveyor

Try the pyreadline.Readline() to emulate the realine interface for Windows build

Overrider the standard readline with the pyreadline.Realine() only after checking if on an 'nt' (windows) machine in the 'create-album' script

Install ffmpeg in appveyor worker

Develop isntall-ffmpeg.ps1

Develop isntall-ffmpeg.ps1 1

Dump install-ffmpeg code in appveyor.yml

Install ffmpeg from npm

Another isntallation trial

WIP

Another isntallation trial 1

Save test download youtube video file to a 'pytest' temp dir in unittests

R

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,7 +6,7 @@ source =
 [run]
 branch = true
 source =
-    music_album_creator
+    music_album_creation
     tests
 parallel = true
 
@@ -24,3 +24,4 @@ exclude_lines =
     abstractproperty
     abstractclassmethod
     warnings.warn
+    download_callback\(url,\ directory,
