--- a/tox.ini
+++ b/tox.ini
@@ -1,51 +1,85 @@
 [tox]
 envlist =
     clean,
+    check,
     quality,
-    py35,
-    py36,
-    py37,
-    reporting,
-;    coveralls
-
+;    docs,
+;    py27-cover,
+;    py27-nocov,
+;    py34-cover,
+;    py34-nocov,
+    py35-cover,
+;    py35-nocov,
+    py36-cover,
+;    py36-nocov,
+    py37-cover,
+;    py37-nocov,
+;    pypy-cover,
+;    pypy-nocov,
+;    pypy3-cover,
+;    pypy3-nocov,
+    report
 
 skip_missing_interpreters = {env:TOX_SKIP_MISSING_INTERPRETERS:True}
 
+passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 [testenv]
 basepython =
     {docs,spell}: {env:TOXPYTHON:python3.6}
-    {bootstrap,clean,check,reporting,coveralls,quality}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report,codecov,coveralls,quality}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
-    PYTHONUNBUFFERED=yes
+    PYTHOUNBUFFERED=yes
     PIP_DISABLE_PIP_VERSION_CHECK=1
     VIRTUALENV_NO_DOWNLOAD=1
 passenv =
     *
+
     # See https://github.com/codecov/codecov-python/blob/5b9d539a6a09bc84501b381b563956295478651a/README.md#using-tox
     codecov: TOXENV
     codecov: CI
     codecov: TRAVIS TRAVIS_*
 deps =
     pytest
+;    pytest-travis-fold
+commands =
+    {posargs:pytest -vv --ignore=src}
+
+[testenv:gg]
+basepython = {env:TOXPYTHON:python3.5}
+setenv =
+    {[testenv]setenv}
+usedevelop = true
+commands =
+    {posargs:pytest --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
     pytest-cov
 
+[testenv:bootstrap]
+deps =
+    jinja2
+    matrix
+skip_install = true
 commands =
-    # --cov-append so that multiple test runs do not erase the .coverage file at each of their starts
-    {posargs:pytest --cov --cov-report=term-missing -vv --ignore=src --cov-append}
+    python ci/bootstrap.py
 
+[testenv:clean]
+commands = coverage erase
+skip_install = true
+deps = coverage
 
 # This env must succeed in order to be meaningful to proceed running the rest of the environments
-[testenv:clean]
+[testenv:check]
 deps =
-    coverage
+    docutils
+    readme-renderer
+    pygments
     check-manifest
 skip_install = true
 commands =
-    coverage erase
+    python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
-    python setup.py check --strict --metadata
-
 
 # This env can be potentially allowed to fail
 [testenv:quality]
@@ -54,10 +88,11 @@ deps =
     pygments
     docutils
     readme-renderer
+;    isort
 skip_install = true
 commands =
     flake8 src tests setup.py
-    python setup.py check --strict --restructuredtext
+    ;    isort --verbose --check-only --diff --recursive src tests setup.py
 
 [flake8]
 # select the type of style errors to check
@@ -107,30 +142,103 @@ ignore =
     E402
 
 
-[testenv:reporting]
+[testenv:spell]
+setenv =
+    SPELLCHECK=1
+commands =
+    sphinx-build -b spelling docs dist/docs
+skip_install = true
 deps =
-    coverage
+    -r{toxinidir}/docs/requirements.txt
+    sphinxcontrib-spelling
+    pyenchant
+
+[testenv:docs]
+deps =
+    -r{toxinidir}/docs/requirements.txt
+commands =
+    sphinx-build {posargs:-E} -b doctest docs dist/docs
+    sphinx-build {posargs:-E} -b html docs dist/docs
+    sphinx-build -b linkcheck docs dist/docs
+
+[testenv:coveralls]
+# requires COVERALLS_REPO_TOKEN
+deps =
+    coveralls
+skip_install = true
+commands =
+    coveralls []
+;;    coverage run --source=music_album_creation setup.py test
+
+[testenv:codecov]
+deps =
+    codecov
+skip_install = true
+commands =
+    coverage xml --ignore-errors
+    codecov []
+
+[testenv:report]
+deps = coverage
 skip_install = true
 commands =
     coverage report
     coverage html
 
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
+
+[testenv:py35-cover]
+basepython = {env:TOXPYTHON:python3.5}
+setenv =
+    {[testenv]setenv}
+usedevelop = true
 commands =
-# requires COVERALLS_REPO_TOKEN
-    coveralls []
-;;    coveralls  (same as above)
-;;    coverage run --source=music_album_creation setup.py test
+    {posargs:pytest --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:py35-splitters]
+basepython = {env:TOXPYTHON:python3.5}
+setenv =
+    {[testenv]setenv}
+usedevelop = true
+commands =
+    {posargs:pytest --cov --cov-report=term-missing -vv -k test_splitters}
+deps =
+    {[testenv]deps}
+    pytest-cov
 
 
-[testenv:py35]
+
+[testenv:py35-nocov]
 basepython = {env:TOXPYTHON:python3.5}
 
-[testenv:py36]
+
+[testenv:py36-cover]
+basepython = {env:TOXPYTHON:python3.6}
+setenv =
+    {[testenv]setenv}
+usedevelop = true
+commands =
+    {posargs:pytest --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:py36-nocov]
 basepython = {env:TOXPYTHON:python3.6}
 
-[testenv:py37]
+
+[testenv:py37-cover]
+basepython = {env:TOXPYTHON:python3.7}
+setenv =
+    {[testenv]setenv}
+usedevelop = true
+commands =
+    {posargs:pytest --cov --cov-report=term-missing -vv}
+deps =
+    {[testenv]deps}
+    pytest-cov
+
+[testenv:py37-nocov]
 basepython = {env:TOXPYTHON:python3.7}
