--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -24,7 +24,7 @@ build:
                 override:
                     - tox
                     -
-                        command: coverage combine
+                        command: coverage
                         coverage:
                             file: .coverage
                             config_file: '.coveragerc'
