--- a/tox.ini
+++ b/tox.ini
@@ -164,25 +164,6 @@ commands =
     python ci/bootstrap.py
 
 
-[testenv:spell]
-setenv =
-    SPELLCHECK=1
-commands =
-    sphinx-build -b spelling docs dist/docs
-skip_install = true
-deps =
-    -r{toxinidir}/docs/requirements.txt
-    sphinxcontrib-spelling
-    pyenchant
-
-[testenv:docs]
-deps =
-    -r{toxinidir}/docs/requirements.txt
-commands =
-    sphinx-build {posargs:-E} -b doctest docs dist/docs
-    sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
-
 [testenv:report]
 deps = coverage
 skip_install = true
@@ -227,3 +208,28 @@ deps =
     mock
 usedevelop = true
 commands = {posargs:pytest --cov -vv -k 'not test_integration and not test_downloading'}
+
+
+############## DOCS ##############
+
+[testenv:spell]
+setenv =
+    SPELLCHECK=1
+use_develop = true
+deps =
+    setuptools >= 40.0.0
+    -r{toxinidir}/docs/requirements.txt
+    pyenchant
+    sphinxcontrib-spelling
+commands =
+    sphinx-build -b spelling docs dist/docs
+
+[testenv:docs]
+deps =
+    setuptools >= 40.0.0
+    -r{toxinidir}/docs/requirements.txt
+use_develop = true
+commands =
+    sphinx-build {posargs:-E} -b doctest docs dist/docs
+    sphinx-build {posargs:-E} -b html docs dist/docs
+    sphinx-build -b linkcheck docs dist/docs
