update config files

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,11 @@
 [tox]
 envlist = clean,check,py35-cover,quality,codecov,
-;active
-;offline
-;splitters
-;integration
 skip_missing_interpreters = {env:TOX_SKIP_MISSING_INTERPRETERS:True}
 passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 
 [testenv]
 basepython =
-    {docs,spell}: {env:TOXPYTHON:python3.6}
+    {docs,spell,dev,dev-cov,notebook}: {env:TOXPYTHON:python3}
     {bootstrap,clean,check,report,codecov,coveralls,quality}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
@@ -17,24 +13,50 @@ setenv =
     PIP_DISABLE_PIP_VERSION_CHECK=1
     VIRTUALENV_NO_DOWNLOAD=1
 passenv =
-    *
     # See https://github.com/codecov/codecov-python/blob/5b9d539a6a09bc84501b381b563956295478651a/README.md#using-tox
     codecov: TOXENV
     codecov: CI
     codecov: TRAVIS TRAVIS_*
-deps =
-    pytest
-    pytest-cov
-    setuptools >= 40.0.0
-    -rrequirements.txt
+; deps =
+;     pytest
+;     pytest-cov
+;     setuptools >= 40.0.0
+;     -rrequirements.txt
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv}
 ;    {posargs:pytest -vv --ignore=src}
+
+
+[testenv:dev]
+description = Install in 'edit' mode and test
+usedevelop = true
+extras = test
+commands = pytest -ra {posargs:tests -vv}
+
+[testenv:dev-cov]
+description = Install in 'edit' mode, Test & measure Coverage
+usedevelop = true
+extras = test
+commands =
+    pytest -ra --cov --cov-report=term-missing \
+      --cov-report=html:{envdir}/htmlcov --cov-context=test \
+      --cov-report=xml:{toxworkdir}/coverage.{envname}.xml \
+      {posargs:-n auto} {toxinidir}{/}tests
+
 
 [testenv:clean]
 deps = coverage
 skip_install = true
 commands = coverage erase
+
+[testenv:notebook]
+description = Run ML ops in jupyter notebook
+extras = notebook
+usedevelop = true
+commands =
+    ; poetry install -E notebook
+    jupyter notebook
+; jupyter notebook
 
 [testenv:check]
 deps =
@@ -198,16 +220,6 @@ deps =
     mock
 usedevelop = false
 commands = {posargs:pytest  -vv -k test_create_album_program}
-
-
-############## SCRUTINIZER CI ##############
-[testenv:scrutinizer]
-basepython = {env:TOXPYTHON:python3.7}
-deps =
-    {[testenv]deps}
-    mock
-usedevelop = true
-commands = {posargs:pytest --cov -vv -k 'not test_integration and not test_downloading'}
 
 
 ############## DOCS ##############
