--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,31 @@
 [tox]
-envlist = clean,check,py35-cover,quality,codecov,
+envlist =
+    {py311, py310, py39, py38, py37, py36}-{dev, sdist, wheel}-{linux, macos, windows}
+; envlist = clean,check,py35-cover,quality,codecov,
 skip_missing_interpreters = {env:TOX_SKIP_MISSING_INTERPRETERS:True}
-passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
+passenv = TOXENV CI CODECOV_*
+
+[gh-actions]
+python =
+    3.6: {py36}{, -path, -sdist, -wheel, -dev}
+    3.7: {py37}{, -path, -sdist, -wheel, -dev}
+    3.8: {py38}{, -path, -sdist, -wheel, -dev}
+    3.9: {py39}{, -path, -sdist, -wheel, -dev}
+    3.10: {py310}{, -path, -sdist, -wheel, -dev}
+    3.11: {py311}{, -path, -sdist, -wheel, -dev}
+
+
+[gh-actions:env]
+PLATFORM =
+    ubuntu-latest: linux
+    macos-latest: macos
+    windows-latest: windows
+
 
 [testenv]
-basepython =
-    {docs,spell,dev,dev-cov,notebook}: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report,codecov,coveralls,quality}: {env:TOXPYTHON:python3}
+; basepython =
+;     {docs,spell,dev,dev-cov,notebook}: {env:TOXPYTHON:python3}
+;     {bootstrap,clean,check,report,codecov,coveralls,quality}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHOUNBUFFERED=yes
@@ -58,169 +77,43 @@ commands =
     jupyter notebook
 ; jupyter notebook
 
+
+## PYTHON PACKAGING
+
+[testenv:build]
+description = Create a source and wheel distribution.
+    Creates .tar.gz and .whl files in the {env:DIST_DIR} folder, that can be upload to a pypi index server.
+basepython = {env:TOXPYTHON:python3}
+deps = build
+skip_install = true
+changedir = {toxinidir}
+commands_pre =
+    python -c 'import os; import shutil; d = "{env:DIST_DIR}"; exec("if os.path.exists(d):\n    shutil.rmtree(d)");'
+commands =
+    python -m build {toxinidir} --outdir {env:DIST_DIR}
+
 [testenv:check]
+description = Check the code for compliance with best practises of Python packaging ecosystem (PyPI, pip, Distribute, etc).
 deps =
-    docutils
-    readme-renderer
-    pygments
-    check-manifest
+    poetry-core
+    pyroma
+    twine
 skip_install = true
 commands =
-    python setup.py check --strict --metadata --restructuredtext
-    check-manifest {toxinidir}
-
-#######################################################################
-
-
-[testenv:py27-cover]
-basepython = {env:TOXPYTHON:python2.7}
-usedevelop = true
-[testenv:py35-cover]
-basepython = {env:TOXPYTHON:python3.5}
-usedevelop = true
-[testenv:py36-cover]
-basepython = {env:TOXPYTHON:python3.6}
-usedevelop = true
-[testenv:py37-cover]
-basepython = {env:TOXPYTHON:python3.7}
-usedevelop = true
-
-[testenv:py35-nocov]
-basepython = {env:TOXPYTHON:python3.5}
-[testenv:py36-nocov]
-basepython = {env:TOXPYTHON:python3.6}
-[testenv:py37-nocov]
-basepython = {env:TOXPYTHON:python3.7}
-
-[testenv:py37-build]
-basepython = {env:TOXPYTHON:python3.7}
-
-[testenv:codecov]
-deps = codecov
-skip_install = true
-commands =
-    coverage xml --ignore-errors
-    codecov []
+    pyroma --directory {toxinidir}
+    pyroma --file {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}.tar.gz
+    python -m twine check {env:DIST_DIR}/{env:PY_PACKAGE}-{env:PKG_VERSION}*
+    # TODO Improvement run 'pyroma --pypi' from some script/CI server after uploading to test-pypi
+depends = build
 
 
 #####################################################################
-
-[testenv:quality]
-deps =
-    flake8
-    pygments
-    docutils
-    readme-renderer
-    isort
-skip_install = true
-commands =
-    flake8 src tests setup.py
-    isort --verbose --check-only --diff --recursive src tests setup.py
-
-[flake8]
-# select the type of style errors to check
-select = B,C,E,F,I,N,S,W
-
-# If True: disable skipping warning when '# noqa' is found
-# If False: skips lines that have '# noqa'; does not check them
-disable-noqa = False
-
-# show the source file generating a warning
-show-source  = True
-# check syntax of the doctests
-doctests     = True
-
-# Codes: http://flake8.pycqa.org/en/latest/user/error-codes.html
-ignore =
-    # multiple spaces before operator
-    E221,
-    # too many blank lines
-    E302,
-    # too many blank lines
-    E303,
-    # expected 2 blank lines after class or function definition
-    E305,
-    # function name should be lowercase
-    N802,
-    # argument name should be lowercase
-    N803,
-    # first argument of a method should be named 'self'
-    N805,
-    # variable in function should be lowercase
-    N806,
-    # lowercase imported as non lowercase
-    N812,
-    # variable 'rawHeaders' in class scope should not be mixedCase
-    N815,
-    # variable 'noneIO' in global scope should not be mixedCase
-    N816,
-    # line break after binary operator (W503 and W504 are opposites)
-    W504,
-    # line too long
-    E501,
-    # multiple statements on one line (colon)
-    E701,
-    # too many leading # for block comment
-    E266,
-    # missing whitespace around arithmetic operator
-    E226,
-    # module level import not at top of file
-    E402
-
-
-[testenv:coveralls]
-# requires COVERALLS_REPO_TOKEN
-deps =
-    coveralls
-skip_install = true
-commands =
-    coveralls []
-
-
-[testenv:bootstrap]
-deps =
-    jinja2
-    matrix
-skip_install = true
-commands =
-    python ci/bootstrap.py
-
-
 [testenv:report]
 deps = coverage
 skip_install = true
 commands =
     coverage report
     coverage html
-
-########################### DEV ###########################
-[testenv:active]
-basepython = {env:TOXPYTHON:python3.5}
-deps = -rrequirements.txt
-usedevelop = true
-commands = create-album
-
-[testenv:splitters]
-basepython = {env:TOXPYTHON:python3.5}
-deps = 
-    pytest
-    pytest-cov
-usedevelop = true
-commands = {posargs:pytest --cov --cov-report=term-missing -vv -k test_splitters}
-
-[testenv:offline]
-basepython = {env:TOXPYTHON:python3.5}
-usedevelop = true
-commands = {posargs:pytest --cov --cov-report=term-missing -vv -k 'not test_downloading'}
-
-[testenv:integration]
-basepython = {env:TOXPYTHON:python3.6}
-deps = 
-    pytest
-    mock
-usedevelop = false
-commands = {posargs:pytest  -vv -k test_create_album_program}
-
 
 ############## DOCS ##############
 
