--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     {py311, py310, py39, py38, py37, py36}-{dev, sdist, wheel}-{linux, macos, windows}
-; envlist = clean,check,py35-cover,quality,codecov,
+isolated_build = true
 skip_missing_interpreters = {env:TOX_SKIP_MISSING_INTERPRETERS:True}
 passenv = TOXENV CI CODECOV_*
 
