--- a/tox.ini
+++ b/tox.ini
@@ -26,16 +26,18 @@ PLATFORM =
 ; basepython =
 ;     {docs,spell,dev,dev-cov,notebook}: {env:TOXPYTHON:python3}
 ;     {bootstrap,clean,check,report,codecov,coveralls,quality}: {env:TOXPYTHON:python3}
+passenv =
+    *
 setenv =
+    DIST_DIR = dist
     PYTHONPATH={toxinidir}/tests
     PYTHOUNBUFFERED=yes
     PIP_DISABLE_PIP_VERSION_CHECK=1
     VIRTUALENV_NO_DOWNLOAD=1
-passenv =
+
     # See https://github.com/codecov/codecov-python/blob/5b9d539a6a09bc84501b381b563956295478651a/README.md#using-tox
     codecov: TOXENV
     codecov: CI
-    codecov: TRAVIS TRAVIS_*
 ; deps =
 ;     pytest
 ;     pytest-cov
