--- a/tox.ini
+++ b/tox.ini
@@ -29,11 +29,12 @@ PLATFORM =
 passenv =
     *
 setenv =
-    DIST_DIR = dist
     PYTHONPATH={toxinidir}/tests
     PYTHOUNBUFFERED=yes
     PIP_DISABLE_PIP_VERSION_CHECK=1
     VIRTUALENV_NO_DOWNLOAD=1
+    DIST_DIR = dist
+    PY_PACKAGE = music_album_creation
 
     # See https://github.com/codecov/codecov-python/blob/5b9d539a6a09bc84501b381b563956295478651a/README.md#using-tox
     codecov: TOXENV
