add extras = test in default testenv

--- a/tox.ini
+++ b/tox.ini
@@ -39,11 +39,7 @@ setenv =
     # See https://github.com/codecov/codecov-python/blob/5b9d539a6a09bc84501b381b563956295478651a/README.md#using-tox
     codecov: TOXENV
     codecov: CI
-; deps =
-;     pytest
-;     pytest-cov
-;     setuptools >= 40.0.0
-;     -rrequirements.txt
+extras = test
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv}
 ;    {posargs:pytest -vv --ignore=src}
@@ -52,13 +48,11 @@ commands =
 [testenv:dev]
 description = Install in 'edit' mode and test
 usedevelop = true
-extras = test
 commands = pytest -ra {posargs:tests -vv}
 
 [testenv:dev-cov]
 description = Install in 'edit' mode, Test & measure Coverage
 usedevelop = true
-extras = test
 commands =
     pytest -ra --cov --cov-report=term-missing \
       --cov-report=html:{envdir}/htmlcov --cov-context=test \
@@ -123,20 +117,22 @@ commands =
 [testenv:spell]
 setenv =
     SPELLCHECK=1
-use_develop = true
-deps =
-    setuptools >= 40.0.0
-    -r{toxinidir}/docs/requirements.txt
-    pyenchant
-    sphinxcontrib-spelling
+usedevelop = true
+extras = docs
+; deps =
+;     setuptools >= 40.0.0
+;     -r{toxinidir}/docs/requirements.txt
+;     pyenchant
+;     sphinxcontrib-spelling
 commands =
     sphinx-build -b spelling docs dist/docs
 
 [testenv:docs]
-deps =
-    setuptools >= 40.0.0
-    -r{toxinidir}/docs/requirements.txt
-use_develop = true
+; deps =
+;     setuptools >= 40.0.0
+;     -r{toxinidir}/docs/requirements.txt
+usedevelop = true
+extras = docs
 commands =
     sphinx-build {posargs:-E} -b doctest docs dist/docs
     sphinx-build {posargs:-E} -b html docs dist/docs
