--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,11 +28,18 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install tox and tox plugin
       run: |
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
-        sudo apt-get update && DEBIAN_FRONTEND=noninteractive sudo apt-get install ffmpeg
+
+    - name: Install ffmpeg on linux
+      if: ${{ matrix.platform == 'macos-linux' }}
+      run: sudo apt-get update && DEBIAN_FRONTEND=noninteractive sudo apt-get install ffmpeg
+
+    - name: Install ffmpeg on macos
+      if: ${{ matrix.platform == 'macos-latest' }}
+      run: brew install ffmpeg
 
     # - name: Do Lint Checking
     #   run: tox -e lint -vv -s false
@@ -86,7 +93,6 @@ jobs:
     - name: Run Documentation Tests
       if: ${{ matrix.platform == 'ubuntu-latest' || matrix.python-version  != '3.6' }}
       run: |
-
         tox -e docs --sitepackages -vv -s false
 
     - name: Upload Source & Wheel distributions as Artefacts
