--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 # POETRY
 [tool.poetry]
-name = "music-album-creator"
+name = "music-album-creation"
 version = "1.3.2"
 description = "A CLI application intending to automate offline music library building"
 authors = ["Konstantinos Lampridis <k.lampridis@hotmail.com>"]
