--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,9 @@ jupyter = { version = "^1.0.0", optional = true }
 prompt-toolkit = { version = "^3.0.33", optional = true}
 matplotlib = {version = "^3.6.2", optional = true}
 
+# Type Checking Dependencies
+mypy = { version = "^1.1.1", optional = true }
+
 [tool.poetry.extras]
 test = [
     "pytest",
@@ -88,9 +91,6 @@ docs = [
 ]
 typing = [
     "mypy",
-    "types-requests",
-    "pytest",
-    "pytest-click",
 ]
 notebook = [
     "jupyter",
