--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,8 @@ PLATFORM =
 ;     {docs,spell,dev,dev-cov,notebook}: {env:TOXPYTHON:python3}
 ;     {bootstrap,clean,check,report,codecov,coveralls,quality}: {env:TOXPYTHON:python3}
 passenv =
-    *
+    YOUTUBE_DL
+    CI_*
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHOUNBUFFERED=yes
@@ -35,10 +36,6 @@ setenv =
     VIRTUALENV_NO_DOWNLOAD=1
     DIST_DIR = dist
     PY_PACKAGE = music_album_creation
-
-    # See https://github.com/codecov/codecov-python/blob/5b9d539a6a09bc84501b381b563956295478651a/README.md#using-tox
-    codecov: TOXENV
-    codecov: CI
 extras = test
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv}
@@ -48,7 +45,7 @@ commands =
 [testenv:dev]
 description = Install in 'edit' mode and test
 usedevelop = true
-commands = pytest -ra {posargs:tests -vv}
+commands = pytest {posargs:-ra tests -vv -s}
 
 [testenv:dev-cov]
 description = Install in 'edit' mode, Test & measure Coverage
@@ -59,6 +56,24 @@ commands =
       --cov-report=xml:{toxworkdir}/coverage.{envname}.xml \
       {posargs:-n auto} {toxinidir}{/}tests
 
+## COVERAGE
+[testenv:coverage]
+description = Combine coverage from test environments
+passenv =
+    DIFF_AGAINST
+setenv =
+    COVERAGE_FILE = {toxworkdir}/.coverage
+skip_install = true
+deps =
+    coverage[toml]>=5.1
+    diff_cover>=6
+parallel_show_output = true
+commands =
+    coverage combine
+    coverage report --skip-covered --show-missing -i
+    coverage xml -o {toxworkdir}/coverage.xml -i
+    coverage html -d {toxworkdir}/htmlcov -i
+depends = {py311, py310, py39, py38, py37, py36}{, -path, -sdist, -wheel, -dev}
 
 [testenv:clean]
 deps = coverage
@@ -160,3 +175,13 @@ commands =
 [testenv:{py311, py310, py39, py38, py37, py36, pypy3}-dev{, -linux, -macos, -windows}]
 description = Install in 'edit' mode & Test
 usedevelop = true
+
+
+# Static Type Checking (MYPY)
+[testenv:type]
+description = Static Type Checking with mypy
+basepython = {env:TOXPYTHON:python3}
+extras = typing
+usedevelop = true
+changedir = {toxinidir}
+commands = mypy --show-error-codes {posargs:src{/}{env:PY_PACKAGE} tests}
