--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,22 @@ classifiers = [
     "Typing :: Typed"
 ]
 
+# Caret  ^
+# ^1.2.3 >=1.2.3 <2.0.0
+# ^1.2	 >=1.2.0 <2.0.0
+# ^1	 >=1.0.0 <2.0.0
+# ^0.2.3 >=0.2.3 <0.3.0
+
+# Tilde  ~
+# ~1.2.3 >=1.2.3 <1.3.0
+# ~1.2	 >=1.2.0 <1.3.0
+# ~1	 >=1.0.0 <2.0.0
+
+# Start *
+# *	    >=0.0.0
+# 1.*	>=1.0.0 <2.0.0
+# 1.2.*	>=1.2.0 <1.3.0
+
 [tool.poetry.dependencies]
 python = "^3.8"
 youtube_dl = "^2021.12.17"
@@ -58,8 +74,8 @@ attrs = "^22.1.0"
 tqdm = "^4.64.1"
 mutagen = "^1.46.0"
 pyreadline = "^2.1"
-pytube = "^12.1.0"
 questionary = "^1.10.0"
+pytube = "^12.1.2"
 
 pytest = { version = "^7.2.0", optional = true }
 pytest-cov = { version = "^4.0.0", optional = true }
@@ -73,6 +89,7 @@ matplotlib = {version = "^3.6.2", optional = true}
 
 # Type Checking Dependencies
 mypy = { version = "^1.1.1", optional = true }
+software-patterns = "^2.0.0"
 
 [tool.poetry.extras]
 test = [
