fix some CWEs and add dev scripts

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ setenv =
     VIRTUALENV_NO_DOWNLOAD=1
     DIST_DIR = dist
     PY_PACKAGE = music_album_creation
+    black,lint,isort: LINT_ARGS = "src tests"
 extras = test
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv}
@@ -185,3 +186,53 @@ extras = typing
 usedevelop = true
 changedir = {toxinidir}
 commands = mypy --show-error-codes {posargs:src{/}{env:PY_PACKAGE} tests}
+
+
+# CODE LINTING, STATIC (STYLE) CHECKING
+
+[testenv:lint]
+description = test if code conforms with our styles
+    to check against code style (aka lint check) run: tox -e lint
+    to apply code style (aka lint apply) run: APPLY_LINT= tox -e lint
+deps =
+    black
+    isort >= 5.0.0
+passenv = APPLY_LINT
+skip_install = true
+changedir = {toxinidir}
+commands =
+    isort {posargs:{env:APPLY_LINT:--check}} "{env:LINT_ARGS:.}"
+    black {posargs:{env:APPLY_LINT:--check}} -S --config pyproject.toml "{env:LINT_ARGS:.}"
+
+[testenv:black]
+description = black ops
+deps = black
+skip_install = true
+changedir = {toxinidir}
+commands = black {posargs:{env:APPLY_BLACK:--check}} --skip-string-normalization \
+    --config pyproject.toml "{env:LINT_ARGS:.}"
+
+[testenv:isort]
+description = isort
+deps = isort >= 5.0.0
+skip_install = true
+changedir = {toxinidir}
+commands = isort {posargs:{env:APPLY_ISORT:--check}} "{env:LINT_ARGS:.}"
+
+[testenv:bandit]
+description = static code security check
+deps = bandit[toml]
+skip_install = true
+commands = bandit -r -c pyproject.toml {posargs:src tests}
+
+[testenv:pylint]
+description = Run the Pylint tool to analyse the Python code and output
+    information about errors, potential problems and convention violations
+deps =
+    pylint ; python_version == '3.11'
+    pylint == 2.7.4 ; python_version < '3.11'
+usedevelop = true
+changedir = {toxinidir}
+commands =
+    - python -m pylint src{/}{env:PY_PACKAGE}
+    - python -m pylint tests
