--- a/tox.ini
+++ b/tox.ini
@@ -236,3 +236,49 @@ changedir = {toxinidir}
 commands =
     - python -m pylint src{/}{env:PY_PACKAGE}
     - python -m pylint tests
+
+
+# GENERATE ARCHITECTURE GRAPHS
+[testenv:pydeps]
+description =
+    Visualise Python dependency graphs (roughly which module imports which) and store in .svg file(s).
+    Eg: `tox -e pydeps`, `PYDEPS_DIR=my-destination-dir tox -e pydeps`.
+    PYDEPS_DIR controls the relative location (to your current working dir) of the target dir to store
+    the generated files. The default target dir is 'pydeps'. Dir is created if it doesn't exist.
+    Requires the 'dot' executable to be in your PATH. Installing the graphviz library should make
+    the dot executable available in your PATH. Installing 'graphviz':
+    * For Linux, please run "sudo apt install graphviz"
+    * For MacOS, please run "brew install graphviz"
+basepython = {env:TOXPYTHON:python3.10}
+passenv =
+    HOME
+    PWD
+    PYDEPS_DIR
+deps = pydeps==1.11.0
+usedevelop = true
+commands_pre =
+    python -c 'from pathlib import Path; import os; p = Path(os.environ["PWD"]) / os.getenv("PYDEPS_DIR", "pydeps"); p.mkdir(parents=True, exist_ok=True);'
+commands =
+    pydeps --version
+
+    # --max-bacon : exclude nodes that are more than n hops away
+    # (default=2, 0 -> infinite)
+
+    # --min-cluster-size : the minimum number of nodes a dependency must have before being clustered (default=0)
+
+    # --max-cluster-size : the maximum number of nodes a dependency can have before the cluster is collapsed to a single node (default=0)
+    # --keep-target-cluster : draw target module as a cluster
+
+    # Draw only the source code package inner dependencies
+    pydeps src{/}{env:PY_PACKAGE} --only {env:PY_PACKAGE} --noshow -o {env:PWD}{/}{env:PYDEPS_DIR:pydeps}{/}deps_inner.svg
+    ; # Draw the source code package inner and external dependencies
+    pydeps src{/}{env:PY_PACKAGE} --cluster --noshow -o {env:PWD}{/}{env:PYDEPS_DIR:pydeps}{/}deps_all.svg
+
+    ; # Visualize the package inner dependencies and abstract the external (eg with numpy, pandas, etc) ones
+    ; # Draw the source code package inner and minimum external dependencies
+    pydeps src{/}{env:PY_PACKAGE} --max-cluster-size=2 --keep-target-cluster --noshow -o {env:PWD}{/}{env:PYDEPS_DIR:pydeps}{/}deps_ktc-mcs_2.svg
+
+    ; # Draw the source code package inner and all external dependencies
+    pydeps src{/}{env:PY_PACKAGE} --keep-target-cluster --noshow -o {env:PWD}{/}{env:PYDEPS_DIR:pydeps}{/}deps_ktc.svg
+
+    python -c 'from pathlib import Path; p = Path("{env:PWD}{/}{env:PYDEPS_DIR:pydeps}"); print(f"\nGenerated .svg files in \"\{str(p.absolute())\}\".");'
