bring the whole project in a faily stable state
We judge the stability by running the Full Test Suite (unit and integration tests). The current code is able to make the full test suite pass.

--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,8 @@ setenv =
     DIST_DIR = dist
     PY_PACKAGE = music_album_creation
     black,lint,isort: LINT_ARGS = "src tests"
+    COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
+    TEST_STATUS_DIR = {envtmpdir}
 extras = test
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv}
@@ -52,10 +54,13 @@ commands = pytest {posargs:-ra tests -vv -s}
 description = Install in 'edit' mode, Test & measure Coverage
 usedevelop = true
 commands =
+    ; add '-n auto' flag for automatic distribution of unit tests on avaiable CPUs
     pytest -ra --cov --cov-report=term-missing \
-      --cov-report=html:{envdir}/htmlcov --cov-context=test \
-      --cov-report=xml:{toxworkdir}/coverage.{envname}.xml \
-      {posargs:-n auto} {toxinidir}{/}tests
+        --cov-report=html:{envdir}/htmlcov --cov-context=test \
+        --cov-report=xml:{toxworkdir}/coverage.{envname}.xml \
+        --junit-xml={toxworkdir}/xunit.{envname}.xml \
+        {posargs:{toxinidir}{/}tests}
+
 
 ## COVERAGE
 [testenv:coverage]
