--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ pytest-cov = { version = "^4.0.0", optional = true }
 pytest-explicit = { version = "^1.0.1", optional = true }
 pytest-click = { version = "^1.1.0", optional = true }
 pytest-xdist = {version = "^3.1.0", optional = true}
+pytest-run-subprocess = { version = "^0.10.0", optional = true }
 
 jupyter = { version = "^1.0.0", optional = true }
 prompt-toolkit = { version = "^3.0.33", optional = true}
@@ -98,6 +99,7 @@ test = [
     "pytest-xdist",
     "pytest-explicit",
     "pytest-click",
+    "pytest-run-subprocess",
 ]
 docs = [
     "sphinx",
