--- a/tox.ini
+++ b/tox.ini
@@ -62,6 +62,13 @@ commands =
         {posargs:{toxinidir}{/}tests}
 
 
+[testenv:download-test-data]
+description = Install in 'edit' mode and test
+usedevelop = true
+changedir = {toxinidir}
+commands =
+    python -c 'from pytube import YouTube; from music_album_creation.downloading import CMDYoutubeDownloader as YD; YD().download_trials("https://www.youtube.com/watch?v=OvC-4BixxkY", "tests/data")'
+
 ## COVERAGE
 [testenv:coverage]
 description = Combine coverage from test environments
