--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ pytest-explicit = { version = "^1.0.1", optional = true }
 pytest-click = { version = "^1.1.0", optional = true }
 pytest-xdist = {version = "^3.1.0", optional = true}
 pytest-run-subprocess = { version = "^0.10.0", optional = true }
+pytest-object-getter = { version = "^1.0.2", optional = true }
 
 jupyter = { version = "^1.0.0", optional = true }
 prompt-toolkit = { version = "^3.0.33", optional = true}
@@ -100,6 +101,7 @@ test = [
     "pytest-explicit",
     "pytest-click",
     "pytest-run-subprocess",
+    "pytest-object-getter",
 ]
 docs = [
     "sphinx",
