--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -5,10 +5,9 @@ ci:
 - any: ['.github/*', '.github/**/*']
 
 
-# Add 'template' label to any change within the 'src/cookiecutter_python' dir
-# Currently, this is where the cookiecutter template (cookiecutter.json, hooks, etc) is
-template:
-- any: ['src/cookiecutter_python/*', 'src/cookiecutter_python/**/*']
+# Add 'business_logic' label to any change within the 'src/music_album_creation' dir
+business_logic:
+- any: ['src/music_album_creation/*', 'src/music_album_creation/**/*']
 
 
 # Add 'docs' label to any change within the 'docs' dir
